--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - "8888:80"
     depends_on:
       - db
+    networks:
+      - trans_network
 
 
   backend:
@@ -45,6 +47,7 @@ services:
       - .env:/app/.env
     depends_on:
       - db
+      - redis 
     
 
   frontend:
@@ -56,6 +59,15 @@ services:
       - trans_network
     volumes:
       - ./src/frontend:/app
+
+
+  redis:
+    image: redis
+    container_name: redis
+    ports:
+      - "6378:6379"
+    networks:
+      - trans_network
 
 
 networks:
