start this shiiiit

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,12 @@ venv/
 
 *.db
 */migrations/*
+
+##############################
+## Env variables
+##############################
+.env
+.env*.local
+
+
+.data/
