--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     image: postgres
     container_name: postgres
     volumes:
-      - ./postgres:/var/lib/postgresql/data
-    env_file:
-      - .env
+      - ./.data/postgres:/var/lib/postgresql/data
+    # env_file:
+    #   - .env
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -18,13 +18,13 @@ services:
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin
-    env_file:
-      - .env
+    # env_file:
+    #   - .env
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
     volumes:
-      - ./pgadmin:/var/lib/pgadmin
+      - ./.data/pgadmin:/var/lib/pgadmin
     ports:
       - "8888:80"
     depends_on:
@@ -40,14 +40,21 @@ services:
       - .env
     ports:
       - "8000:8000"
-    networks:
-      - trans_network
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - SECRET_KEY=${SECRET_KEY}
     volumes:
       - ./src/backend:/app
-      - .env:/app/.env
+      # - .env:/app/.env
     depends_on:
       - db
       - redis 
+    networks:
+      - trans_network
     
 
   frontend:
@@ -68,7 +75,6 @@ services:
       - "6378:6379"
     networks:
       - trans_network
-
 
 networks:
   trans_network:
