Modify the use of .env for the backend

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,8 @@ venv/
 .env
 
 *.db
-*/migrations/*
+**/migrations/*
+!**/migrations/__init__.py
 
 ##############################
 ## Env variables
