--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,8 @@ services:
     container_name: postgres
     volumes:
       - ./.data/postgres:/var/lib/postgresql/data
-    # env_file:
-    #   - .env
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    env_file:
+      - .env
     ports: 
       - "5432:5432"
     networks:
@@ -18,11 +14,8 @@ services:
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin
-    # env_file:
-    #   - .env
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    env_file:
+      - .env
     volumes:
       - ./.data/pgadmin:/var/lib/pgadmin
     ports:
@@ -40,16 +33,8 @@ services:
       - .env
     ports:
       - "8000:8000"
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_HOST=${POSTGRES_HOST}
-      - POSTGRES_PORT=${POSTGRES_PORT}
-      - SECRET_KEY=${SECRET_KEY}
     volumes:
       - ./src/backend:/app
-      # - .env:/app/.env
     depends_on:
       - db
       - redis 
@@ -66,7 +51,6 @@ services:
       - trans_network
     volumes:
       - ./src/frontend:/app
-
 
   redis:
     image: redis
