fixing /me route

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,28 @@
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_HOST=
-POSTGRES_PORT=
-PGADMIN_DEFAULT_EMAIL=
-PGADMIN_DEFAULT_PASSWORD=
-SECRET_KEY=
+# POSTGRES
+POSTGRES_DB=<YOUR_SECRET>
+POSTGRES_USER=<YOUR_SECRET>
+POSTGRES_PASSWORD=<YOUR_SECRET>
+POSTGRES_HOST=<YOUR_SECRET>
+POSTGRES_PORT=<YOUR_SECRET>
+
+# PGADMIN
+PGADMIN_DEFAULT_EMAIL=<YOUR_SECRET>
+PGADMIN_DEFAULT_PASSWORD=<YOUR_SECRET>
+
+# DJANGO
+SECRET_KEY=<YOUR_SECRET>
+DEBUG_DJANGO=<YOUR_SECRET>
+
+# Superuser django
+SUPERUSER_NAME=<YOUR_SECRET>
+SUPERUSER_PASSWORD=<YOUR_SECRET>
+SUPERUSER_EMAIL=<YOUR_SECRET>
+
+# OAuth 42
+CLIENT_ID=<YOUR_SECRET>
+CLIENT_SECRET=<YOUR_SECRET>
+REDIRECT_URI=<YOUR_SECRET>
+
+# MailGun
+MAILGUN_API_KEY=<YOUR_SECRET>
+MAILGUN_SENDER_DOMAIN=<YOUR_SECRET>
