--- a/src/frontend/nginx/nginx.conf
+++ b/src/frontend/nginx/nginx.conf
@@ -1,15 +1,35 @@
 server {
     listen 80;
-    
+    server_name localhost;
+
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name localhost;
+
+    ssl_certificate /etc/nginx/ssl/selfsigned.crt;
+    ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
     root /app;
 
     location /public/ {
-        try_files $uri $uri/;
+        try_files $uri $uri/ =404;
     }
 
     location / {
+        
+        location ~ ^/backend {
+            proxy_pass http://localhost:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
         try_files $uri $uri/ /index.html;
     }
-
-
 }
