--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
     container_name: backend
     env_file:
       - .env
-    ports:
-      - "8000:8000"
+    # ports:
+    #   - "8000:8000"
     volumes:
       - ./src/backend:/app
     depends_on:
@@ -30,8 +30,8 @@ services:
   frontend:
     container_name: frontend
     build: ./src/frontend
-    ports:
-      - "3000:443"
+    # ports:
+    #   - "3000:80"
     networks:
       - trans_network
     volumes:
@@ -44,6 +44,16 @@ services:
       - "6378:6379"
     networks:
       - trans_network
+
+  nginx:
+    container_name: nginx
+    build: ./src/nginx
+    ports:
+      - "3000:443"
+    networks:
+      - trans_network
+
+    
 
 networks:
   trans_network:
