--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name 10.14.1.11;
-    return 301 https://$server_name$request_uri;
+    return 301 https://$server_name:3000$request_uri;
 }
 
 server {
@@ -36,6 +36,14 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /media/ {
+        alias /var/www/media/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
