--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name 10.31.4.10;
     return 301 https://$server_name:3000$request_uri;
 }
 
