--- a/.env.template
+++ b/.env.template
@@ -26,3 +26,12 @@ REDIRECT_URI=<YOUR_SECRET>
 # MailGun
 MAILGUN_API_KEY=<YOUR_SECRET>
 MAILGUN_SENDER_DOMAIN=<YOUR_SECRET>
+
+# Mail Server
+SERVER_EMAIL_MAILGUN=<YOUR_SECRET>
+DEFAULT_FROM_EMAIL_MAILGUN=<YOUR_SECRET>
+
+# Media 
+DEFAULT_AVATAR=<YOUR_SECRET>
+
+MEDIA_URL=<YOUR_SECRET>
